--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 2rem;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.formInput {
+  display: flex;
+  padding: 1rem;
+  justify-content: flex-end;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.formInput input {
+  margin-left: 1rem;
+  font-size: 2rem;
+  border-radius: 5px;
 }
+
+.formSubmitButton {
+  /*align-self: center;*/
+  height: 2rem;
+  width: 8rem;
+  margin-left: 10rem;
+  border-radius: 5px;
+}
+
+.submitDiv {
+  display: inline-block;
+}
+
+
