added select box for rating

--- a/src/App.css
+++ b/src/App.css
@@ -18,12 +18,18 @@
 
 .formInput input {
   margin-left: 1rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
+  border-radius: 5px;
+}
+
+.formInput select {
+  margin-left: 1rem;
+  font-size: 1.25rem;
   border-radius: 5px;
 }
 
 .formSubmitButton {
-  /*align-self: center;*/
+  font-size: 1rem;
   height: 2rem;
   width: 8rem;
   margin-left: 10rem;
